fix(chat): preserve intentional linebreaks in message display

--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -205,6 +205,10 @@
         border-radius: 6px 0px 6px 6px;
     }
 
+    .usermessage {
+        white-space: pre-wrap;
+    }
+
     &.error {
         border-radius: 0px;
 
